force-app/main/default/objects/Customer_Product_Setup__c/Customer_Product_Setup__c.object-meta.xml
<CustomObject>
    <label>Product Details</label>
    <nameField>
        <displayFormat>PS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Product Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>