force-app/main/default/objects/Customer_Product_Setup__c/fields/Add_to_Existing_ENT_ID__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Existing_ENT_ID__c</fullName>
    <label>Add to Existing ENT ID</label>
    <length>5</length>
    <type>Text</type>
</CustomField>