force-app/main/default/objects/Customer_Product_Setup__c/fields/Card_Marketing_Card_Status__c.field-meta.xml
<CustomField>
    <fullName>Card_Marketing_Card_Status__c</fullName>
    <label>Card Marketing Card Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Card Order Placed</fullName>
            </value>
            <value>
                <fullName>Pending Proof Approval</fullName>
            </value>
            <value>
                <fullName>Cards in Production</fullName>
            </value>
            <value>
                <fullName>Pending Test Swipe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>