force-app/main/default/objects/Customer_Product_Setup__c/fields/Concept__c.field-meta.xml
<CustomField>
    <fullName>Concept__c</fullName>
    <label>Concept</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TS</fullName>
            </value>
            <value>
                <fullName>QS</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>