force-app/main/default/objects/Customer_Product_Setup__c/fields/Config_Center_Existing_Environment__c.field-meta.xml
<CustomField>
    <fullName>Config_Center_Existing_Environment__c</fullName>
    <label>Config Center-Existing Environment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>