force-app/main/default/objects/Customer_Product_Setup__c/fields/Control_Scan_Processing_MID__c.field-meta.xml
<CustomField>
    <fullName>Control_Scan_Processing_MID__c</fullName>
    <label>Control Scan-Processing MID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>