force-app/main/default/objects/Customer_Product_Setup__c/fields/ForecastLiveDate__c.field-meta.xml
<CustomField>
    <fullName>ForecastLiveDate__c</fullName>
    <description>This is not pertaining to the product. Needed to add this field here so sales rep can edit while quote is locked for approval.</description>
    <label>Forecasted Live Date</label>
    <type>Date</type>
</CustomField>