force-app/main/default/objects/Customer_Product_Setup__c/fields/Insight_Existing_URL__c.field-meta.xml
<CustomField>
    <fullName>Insight_Existing_URL__c</fullName>
    <label>Insight-Existing URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>