force-app/main/default/objects/Customer_Product_Setup__c/fields/NSS_Ship_Firewall_To__c.field-meta.xml
<CustomField>
    <fullName>NSS_Ship_Firewall_To__c</fullName>
    <label>NSS-Ship Firewall To</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NSS_Reseller_Installing_Firewall__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>