force-app/main/default/objects/Customer_Product_Setup__c/fields/Related_Quote__c.field-meta.xml
<CustomField>
    <fullName>Related_Quote__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Quote</label>
    <referenceTo>zqu__Quote__c</referenceTo>
    <relationshipName>Customer_Product_Setup</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>