force-app/main/default/objects/Customer_Product_Setup__c/fields/Reseller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Customer_Product_Setup_Reseller</relationshipName>
    <type>Lookup</type>
</CustomField>