force-app/main/default/objects/Customer_Product_Setup__c/fields/Reseller_Email__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Email__c</fullName>
    <formula>Reseller_Contact__r.Email</formula>
    <label>Reseller Email</label>
    <type>Text</type>
</CustomField>