force-app/main/default/objects/Customer_Product_Setup__c/fields/Site_Hours__c.field-meta.xml
<CustomField>
    <fullName>Site_Hours__c</fullName>
    <label>Site Hours</label>
    <length>100</length>
    <type>Text</type>
</CustomField>