force-app/main/default/objects/Customer_Product_Setup__c/fields/Site_Install_Contact__c.field-meta.xml
<CustomField>
    <fullName>Site_Install_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site Install Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Customer_Product_Setup_Site_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>