force-app/main/default/objects/Customer_Product_Setup__c/fields/Site_Install_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Install_Contact_Phone__c</fullName>
    <formula>Site_Install_Contact__r.Phone</formula>
    <label>Site Install Contact Phone</label>
    <type>Text</type>
</CustomField>