force-app/main/default/objects/Customer_Product_Setup__c/fields/Site_Phone__c.field-meta.xml
<CustomField>
    <fullName>Site_Phone__c</fullName>
    <label>Site Phone</label>
    <type>Phone</type>
</CustomField>