force-app/main/default/objects/Customer_Product_Setup__c/fields/Software_Key_Number__c.field-meta.xml
<CustomField>
    <fullName>Software_Key_Number__c</fullName>
    <label>Software Key Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>