force-app/main/default/objects/Customer_Product_Setup__c/fields/User_1_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_1_Phone__c</fullName>
    <formula>User_1_Contact__r.Phone</formula>
    <label>User 1 Phone</label>
    <type>Text</type>
</CustomField>