force-app/main/default/objects/Customer_Product_Setup__c/fields/User_2_Contact__c.field-meta.xml
<CustomField>
    <fullName>User_2_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User 2 Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Customer_Product_Setup1</relationshipName>
    <type>Lookup</type>
</CustomField>