force-app/main/default/objects/Customer_Product_Setup__c/fields/User_2_Name__c.field-meta.xml
<CustomField>
    <fullName>User_2_Name__c</fullName>
    <formula>User_2_Contact__r.FirstName</formula>
    <label>User 2 Name</label>
    <type>Text</type>
</CustomField>