force-app/main/default/objects/Customer_Product_Setup__c/fields/User_2_Services__c.field-meta.xml
<CustomField>
    <fullName>User_2_Services__c</fullName>
    <label>User 2 Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aloha Command Center</fullName>
            </value>
            <value>
                <fullName>Aloha Configuration Center</fullName>
            </value>
            <value>
                <fullName>Aloha Guest Manager</fullName>
            </value>
            <value>
                <fullName>Aloha Insight</fullName>
            </value>
            <value>
                <fullName>Aloha Loyalty</fullName>
            </value>
            <value>
                <fullName>Aloha MemberLink</fullName>
            </value>
            <value>
                <fullName>Aloha Online Ordering</fullName>
            </value>
            <value>
                <fullName>Aloha Online Reservations</fullName>
            </value>
            <value>
                <fullName>Aloha Restaurant Guard</fullName>
            </value>
            <value>
                <fullName>Aloha Restore</fullName>
            </value>
            <value>
                <fullName>Aloha Stored Value</fullName>
            </value>
            <value>
                <fullName>Blackhawk Integration</fullName>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
            </value>
            <value>
                <fullName>ControlScan</fullName>
            </value>
            <value>
                <fullName>Custom Development</fullName>
            </value>
            <value>
                <fullName>Customer Connect</fullName>
            </value>
            <value>
                <fullName>Customer Voice</fullName>
            </value>
            <value>
                <fullName>DI Sample Product</fullName>
            </value>
            <value>
                <fullName>End Point Security</fullName>
            </value>
            <value>
                <fullName>Hosted Data Replication</fullName>
            </value>
            <value>
                <fullName>HR Bridge</fullName>
            </value>
            <value>
                <fullName>Internal Network Scanning</fullName>
            </value>
            <value>
                <fullName>Log Management</fullName>
            </value>
            <value>
                <fullName>Marketing Solution</fullName>
            </value>
            <value>
                <fullName>MenuLink</fullName>
            </value>
            <value>
                <fullName>NCR Antivirus</fullName>
            </value>
            <value>
                <fullName>NCR Back Office Labor</fullName>
            </value>
            <value>
                <fullName>NCR Ever Cloud</fullName>
            </value>
            <value>
                <fullName>NCR Guest Pad Prime</fullName>
            </value>
            <value>
                <fullName>NCR Labor Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>