force-app/main/default/objects/Customer_Product_Setup__c/fields/User_3_Phone__c.field-meta.xml
<CustomField>
    <fullName>User_3_Phone__c</fullName>
    <formula>User_3_Contact__r.Phone</formula>
    <label>User 3 Phone</label>
    <type>Text</type>
</CustomField>